--- a/Vijay Lakade.css
+++ b/Vijay Lakade.css
@@ -12,7 +12,7 @@ html {
 
 
 /* grid */
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 767px) {
   .col-xs-11 {width: 91.662%;}
   .col-xs-10 {width: 83.332%;}
   .col-xs-9 {width: 75%;}
